gen/parser/psythonASTParser.java
// Generated from C:/Users/mocli/Code/psython2/src/parser\psythonAST.g4 by ANTLR 4.7
package parser;

import ast.expression.*;
import ast.component.*;
import ast.leaf.*;
import ast.visitor.*;
import ast.wrapper.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class psythonASTParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, ARITH_OPT=6, REL_OPT=7, BOOL=8, 
		IF=9, ELIF=10, ELSE=11, RETURN=12, DEF=13, WHILE=14, PRINT=15, TRUE=16, 
		FALSE=17, AND=18, OR=19, NOT=20, NEXT_RAND=21, SEED_RAND=22, ID=23, NL=24, 
		INT=25, STRING=26, CHAR=27, WS=28, COMMENT=29, INDENT=30, DEDENT=31;
	public static final int
		RULE_program = 0, RULE_explist = 1, RULE_expression = 2, RULE_return_cmp = 3, 
		RULE_function = 4, RULE_function_call = 5, RULE_assignment = 6, RULE_arithmetic = 7, 
		RULE_relational = 8, RULE_logical = 9, RULE_print = 10, RULE_next_rand = 11, 
		RULE_seed_rand = 12, RULE_if_then_else = 13, RULE_while_exp = 14, RULE_computable = 15, 
		RULE_value_holder = 16, RULE_argument = 17, RULE_idlist = 18, RULE_arglist = 19, 
		RULE_primitive_truth = 20, RULE_truth_val = 21, RULE_literal = 22;
	public static final String[] ruleNames = {
		"program", "explist", "expression", "return_cmp", "function", "function_call", 
		"assignment", "arithmetic", "relational", "logical", "print", "next_rand", 
		"seed_rand", "if_then_else", "while_exp", "computable", "value_holder", 
		"argument", "idlist", "arglist", "primitive_truth", "truth_val", "literal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "':'", "'='", "','", null, null, null, "'if'", "'elif'", 
		"'else'", "'return'", "'def'", "'while'", "'print'", "'True'", "'False'", 
		"'and'", "'or'", "'not'", "'nextr()'", "'seedr()'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, "ARITH_OPT", "REL_OPT", "BOOL", "IF", 
		"ELIF", "ELSE", "RETURN", "DEF", "WHILE", "PRINT", "TRUE", "FALSE", "AND", 
		"OR", "NOT", "NEXT_RAND", "SEED_RAND", "ID", "NL", "INT", "STRING", "CHAR", 
		"WS", "COMMENT", "INDENT", "DEDENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "psythonAST.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public psythonASTParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ExpressionList result = new ExpressionList();
		public ExplistContext el;
		public TerminalNode EOF() { return getToken(psythonASTParser.EOF, 0); }
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof psythonASTVisitor ) return ((psythonASTVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			((ProgramContext)_localctx).el = explist();
			setState(47);
			match(EOF);

			        ((ProgramContext)_localctx).result =  ((ProgramContext)_localctx).el.result;
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExplistContext extends ParserRuleContext {
		public ExpressionList result = new ExpressionList();
		public ExpressionContext exp;
		public ExplistContext el;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public TerminalNode NL() { return getToken(psythonASTParser.NL, 0); }
		public ExplistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_explist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).enterExplist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).exitExplist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof psythonASTVisitor ) return ((psythonASTVisitor<? extends T>)visitor).visitExplist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExplistContext explist() throws RecognitionException {
		ExplistContext _localctx = new ExplistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_explist);
		try {
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				((ExplistContext)_localctx).exp = expression();
				setState(51);
				((ExplistContext)_localctx).el = explist();

				    	((ExplistContext)_localctx).result =  ((ExplistContext)_localctx).el.result;
				    	_localctx.result.insert_expression(((ExplistContext)_localctx).exp.result);
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				match(NL);
				setState(55);
				((ExplistContext)_localctx).el = explist();

					    ((ExplistContext)_localctx).result =  ((ExplistContext)_localctx).el.result;
					
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Expression result = null;
		public Function_callContext fc;
		public AssignmentContext asg;
		public FunctionContext fn;
		public ArithmeticContext ari;
		public RelationalContext rel;
		public LogicalContext lgc;
		public PrintContext prt;
		public If_then_elseContext ife;
		public While_expContext whl;
		public Next_randContext nr;
		public Seed_randContext sr;
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public ArithmeticContext arithmetic() {
			return getRuleContext(ArithmeticContext.class,0);
		}
		public RelationalContext relational() {
			return getRuleContext(RelationalContext.class,0);
		}
		public LogicalContext logical() {
			return getRuleContext(LogicalContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public If_then_elseContext if_then_else() {
			return getRuleContext(If_then_elseContext.class,0);
		}
		public While_expContext while_exp() {
			return getRuleContext(While_expContext.class,0);
		}
		public Next_randContext next_rand() {
			return getRuleContext(Next_randContext.class,0);
		}
		public Seed_randContext seed_rand() {
			return getRuleContext(Seed_randContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof psythonASTVisitor ) return ((psythonASTVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expression);
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				((ExpressionContext)_localctx).fc = function_call();

				        ((ExpressionContext)_localctx).result =  ((ExpressionContext)_localctx).fc.result;
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				((ExpressionContext)_localctx).asg = assignment();

				        ((ExpressionContext)_localctx).result =  ((ExpressionContext)_localctx).asg.result;
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				((ExpressionContext)_localctx).fn = function();

				        ((ExpressionContext)_localctx).result =  ((ExpressionContext)_localctx).fn.result;
				    
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				((ExpressionContext)_localctx).ari = arithmetic();

				        ((ExpressionContext)_localctx).result =  ((ExpressionContext)_localctx).ari.result;
				    
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(73);
				((ExpressionContext)_localctx).rel = relational();

				        ((ExpressionContext)_localctx).result =  ((ExpressionContext)_localctx).rel.result;
				    
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(76);
				((ExpressionContext)_localctx).lgc = logical();

				        ((ExpressionContext)_localctx).result =  ((ExpressionContext)_localctx).lgc.result;
				    
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(79);
				((ExpressionContext)_localctx).prt = print();

				        ((ExpressionContext)_localctx).result =  ((ExpressionContext)_localctx).prt.result;
				    
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(82);
				((ExpressionContext)_localctx).ife = if_then_else();

				        ((ExpressionContext)_localctx).result =  ((ExpressionContext)_localctx).ife.result;
				    
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(85);
				((ExpressionContext)_localctx).whl = while_exp();

				        ((ExpressionContext)_localctx).result =  ((ExpressionContext)_localctx).whl.result;
				    
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(88);
				((ExpressionContext)_localctx).nr = next_rand();

				        ((ExpressionContext)_localctx).result =  ((ExpressionContext)_localctx).nr.result;
				    
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(91);
				((ExpressionContext)_localctx).sr = seed_rand();

				        ((ExpressionContext)_localctx).result =  ((ExpressionContext)_localctx).sr.result;
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Return_cmpContext extends ParserRuleContext {
		public ReturnCmp result = null;
		public ArgumentContext a;
		public TerminalNode RETURN() { return getToken(psythonASTParser.RETURN, 0); }
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public Return_cmpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_cmp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).enterReturn_cmp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).exitReturn_cmp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof psythonASTVisitor ) return ((psythonASTVisitor<? extends T>)visitor).visitReturn_cmp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Return_cmpContext return_cmp() throws RecognitionException {
		Return_cmpContext _localctx = new Return_cmpContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_return_cmp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(RETURN);
			setState(97);
			((Return_cmpContext)_localctx).a = argument();

			        ((Return_cmpContext)_localctx).result =  new ReturnCmp(((Return_cmpContext)_localctx).a.result);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public FunctionExp result = null;
		public Token fid;
		public IdlistContext argl;
		public ExplistContext fbd;
		public Return_cmpContext ret;
		public TerminalNode DEF() { return getToken(psythonASTParser.DEF, 0); }
		public TerminalNode INDENT() { return getToken(psythonASTParser.INDENT, 0); }
		public List<TerminalNode> NL() { return getTokens(psythonASTParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(psythonASTParser.NL, i);
		}
		public TerminalNode DEDENT() { return getToken(psythonASTParser.DEDENT, 0); }
		public TerminalNode ID() { return getToken(psythonASTParser.ID, 0); }
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public Return_cmpContext return_cmp() {
			return getRuleContext(Return_cmpContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof psythonASTVisitor ) return ((psythonASTVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(DEF);
			setState(101);
			((FunctionContext)_localctx).fid = match(ID);
			setState(102);
			match(T__0);
			setState(103);
			((FunctionContext)_localctx).argl = idlist();
			setState(104);
			match(T__1);
			setState(105);
			match(T__2);
			setState(106);
			match(INDENT);
			setState(107);
			((FunctionContext)_localctx).fbd = explist();
			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NL:
				{
				setState(108);
				match(NL);
				}
				break;
			case RETURN:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(112);
			((FunctionContext)_localctx).ret = return_cmp();
			setState(113);
			match(NL);
			setState(114);
			match(DEDENT);

					    IdentifierNode f_name = new IdentifierNode((((FunctionContext)_localctx).fid!=null?((FunctionContext)_localctx).fid.getText():null));
					    ((FunctionContext)_localctx).result =  new FunctionExp(f_name, ((FunctionContext)_localctx).argl.result,
			                                     ((FunctionContext)_localctx).fbd.result, ((FunctionContext)_localctx).ret.result);
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_callContext extends ParserRuleContext {
		public FunctionCallExp result = null;
		public Token id;
		public ArglistContext al;
		public TerminalNode ID() { return getToken(psythonASTParser.ID, 0); }
		public ArglistContext arglist() {
			return getRuleContext(ArglistContext.class,0);
		}
		public Function_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).enterFunction_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).exitFunction_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof psythonASTVisitor ) return ((psythonASTVisitor<? extends T>)visitor).visitFunction_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_callContext function_call() throws RecognitionException {
		Function_callContext _localctx = new Function_callContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			((Function_callContext)_localctx).id = match(ID);
			setState(118);
			match(T__0);
			setState(119);
			((Function_callContext)_localctx).al = arglist();
			setState(120);
			match(T__1);

				    ((Function_callContext)_localctx).result =  new FunctionCallExp(new IdentifierNode((((Function_callContext)_localctx).id!=null?((Function_callContext)_localctx).id.getText():null)), ((Function_callContext)_localctx).al.result);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentExp result = null;
		public Token i;
		public Value_holderContext v;
		public TerminalNode ID() { return getToken(psythonASTParser.ID, 0); }
		public Value_holderContext value_holder() {
			return getRuleContext(Value_holderContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof psythonASTVisitor ) return ((psythonASTVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			((AssignmentContext)_localctx).i = match(ID);
			setState(124);
			match(T__3);
			setState(125);
			((AssignmentContext)_localctx).v = value_holder();

			    	((AssignmentContext)_localctx).result =  new AssignmentExp(new IdentifierNode((((AssignmentContext)_localctx).i!=null?((AssignmentContext)_localctx).i.getText():null)), ((AssignmentContext)_localctx).v.result);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArithmeticContext extends ParserRuleContext {
		public ArithmeticExp result = null;
		public ComputableContext lhs;
		public Token o;
		public ComputableContext rhs;
		public List<ComputableContext> computable() {
			return getRuleContexts(ComputableContext.class);
		}
		public ComputableContext computable(int i) {
			return getRuleContext(ComputableContext.class,i);
		}
		public TerminalNode ARITH_OPT() { return getToken(psythonASTParser.ARITH_OPT, 0); }
		public ArithmeticContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).enterArithmetic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof psythonASTListener ) ((psythonASTListener)listener).exitArithmetic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof psythonASTVisitor ) return ((psythonASTVisitor<? extends T>)visitor).visitArithmetic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArithmeticContext arithmetic() throws RecognitionException {
		ArithmeticContext _localctx = new ArithmeticContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_arithmetic);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			((ArithmeticContext)_localctx).lhs = computable();
			setState(129);
			((ArithmeticContext)_localctx).o = match(ARITH_OPT);
			setState(130);
			((ArithmeticContext)_localctx).rhs = computable();

			        ((ArithmeticContext)_localctx).result =  new ArithmeticExp(((ArithmeticContext)_localctx).lhs.result, ((ArithmeticContext)_localctx).rhs.result, (((ArithmeticContext)_localctx).o!=null?((ArithmeticContext)_localctx).o.getText():null));
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
